@@ -506,7 +506,7 @@
       <component name="evolution" dir="evolution" group="desktop">
         <podir dir="po"/>
         <potname name="evolution-2.6.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-14"/>
         <regenerate/>
         <download/>
       </component>
@@ -537,7 +537,7 @@
       <component name="evolution-data-server" dir="evolution-data-server" group="desktop">
         <podir dir="po"/>
         <potname name="evolution-data-server-1.6.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-14"/>
         <regenerate/>
         <download/>
       </component>
@@ -557,7 +557,7 @@
       <component name="evolution-exchange" dir="evolution-exchange" group="desktop">
         <podir dir="po"/>
         <potname name="evolution-exchange-2.6.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-14"/>
         <regenerate/>
         <download/>
       </component>
@@ -1965,7 +1965,7 @@
       <component name="gtkhtml" dir="gtkhtml" group="desktop">
         <podir dir="po"/>
         <potname name="gtkhtml-3.8.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-14"/>
         <regenerate/>
         <download/>
       </component>
