@@ -1,3 +1,8 @@
+2006-03-09  Danilo Šegan  <danilo@gnome.org>
+
+	* translation-status.xml: branch evolution, evolution-data-server, 
+	evolution-exchange and gtkhtml for gnome-2-14.
+
 2006-02-12  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Moved new modules according to final
